@@ -53,6 +53,7 @@ PRIV attr_privs_set[] = {
   {"prefixmatch", '\0', AF_PREFIXMATCH, AF_PREFIXMATCH},
   {"veiled", 'V', AF_VEILED, AF_VEILED},
   {"debug", 'b', AF_DEBUG, AF_DEBUG},
+  {"no_debug", 'B', AF_NODEBUG, AF_NODEBUG},
   {"public", 'p', AF_PUBLIC, AF_PUBLIC},
   {"nearby", 'n', AF_NEARBY, AF_NEARBY},
   {"noname", 'N', AF_NONAME, AF_NONAME},
@@ -80,6 +81,7 @@ PRIV attr_privs_view[] = {
   {"prefixmatch", '\0', AF_PREFIXMATCH, AF_PREFIXMATCH},
   {"veiled", 'V', AF_VEILED, AF_VEILED},
   {"debug", 'b', AF_DEBUG, AF_DEBUG},
+  {"no_debug", 'B', AF_NODEBUG, AF_NODEBUG},
   {"public", 'p', AF_PUBLIC, AF_PUBLIC},
   {"nearby", 'n', AF_NEARBY, AF_NEARBY},
   {"noname", 'N', AF_NONAME, AF_NONAME},
